2010-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Prevent out-of-range boxes from creating
	degenerate invisible boxes in the output file.  Can reduce file size for
	vector format output.
	Bug #3096750

2010-10-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (parse_fillstyle):  Allow "border" as a keyword without
	necessarily having an immediately following linetype or color.

	* src/plot2d.c (eval_plots):  fillcolor was not taking into account
	user-defined linetypes.

	* src/plot3d.c src/misc.c:  Simplify calls to load_linetype() 

	* lisp/gnuplot.el: Emacs 24 does not have make-local-hook
	contributed patch #3095458

	* ChangeLog.2: Split off ChangeLog at the point 4.5 was tagged.

	* docs/gnuplot.texi:  regenerate from gnuplot.doc v 1.633

2010-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: The AC_CHECK_LIB macro apparently always appends
	to LIBS (despite what the documentation says). We want to accummulate
	readline-associated libraries in TERMLIBS rather than LIBS, 
	so save and restore LIBS around the checks.

2010-10-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (boxplot_range_fiddling): trap and report an error
	if the x coordinate of a boxplot is undefined.
	Bug #3092435

	* src/plot2d.c (get_data): Up until now this routine has returned
	the number of lines from which data were read, including lines
	containing undefined points. Change this to return the number of
	well-defined data points.  That way a file of junk is recognized as
	empty if read with either 'using 1:2' or 'using ($1):($2)'.
	Bug #3092435

2010-10-20  Graham Reed  <greed@users.sourceforge.net>

	* configure.in src/alloc.c:  Test at configuration time whether the
	local implementation of malloc(0) returns 0 rather than a pointer.
	If so, work around it in gp_malloc().  Replaces alpha-specific fix
	of 2010-10-04.

2010-10-18  Ethan A Merritt  <merritt@u.washington.edu>
